--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
 
 body {
     width: 100vw;
+    overflow-x: hidden;
 }
 
 a {
@@ -47,6 +48,7 @@ header {
     top: 0px;
     z-index: 2;
     width: 100%;
+    height: 80px;
     border-bottom: 1px solid rgb(198, 198, 198);
 }
 
@@ -138,7 +140,7 @@ header {
 }
 
 main {
-    margin-top: 85px;
+    margin-top: 80px;
 }
 
 #offerSection {
@@ -156,7 +158,7 @@ main {
     align-items: center;
     justify-content: center;
     gap: 4px;
-    padding: 6px;
+    padding: 5px;
     cursor: pointer;
 }
 
@@ -178,7 +180,7 @@ main {
 }
 
 #offers {
-    width: 100%;
+    width: 100vw;
 }
 
 #offers ul {
@@ -263,6 +265,7 @@ h1 {
 
 #subtitle {
     display: flex;
+    flex-wrap: wrap;
     width: 100%;
 }
 
@@ -278,7 +281,6 @@ h1 {
 #subtitle .underline {
     text-decoration: underline;
 }
-
 
 #sideBar {
     grid-area: sideBar;
@@ -471,4 +473,110 @@ input[type="checkbox"]:checked {
 
 #mainContent {
     grid-area: mainContent;
+    width: 100%;
+    padding-left: 20px;
+}
+
+#filterList {
+    display: flex;
+    align-items: start;
+    justify-content: space-around;
+    gap: 20px;
+    flex-wrap: nowrap;
+    height: 200px;
+    width: 75vw;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    scroll-snap-type: x mandatory;
+}
+
+#filterList li {
+    scroll-snap-align: start;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    text-align: center;
+    gap: 20px;
+}
+
+#filterList img {
+    height: 60px;
+    width: 60px;
+}
+
+#filterList div {
+    border: 3px solid rgb(233, 233, 233);
+    border-radius: 80%;
+    padding: 18px;
+    display: flex;
+    align-items: center;
+}
+
+#filterList div:hover {
+    border-color: rgb(198, 198, 198);
+    cursor: pointer;
+}
+
+#filterList p {
+    font-size: 14px;
+    font-weight: 350;
+}
+
+#compare {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 15px 15px 15px 30px;
+    margin-top: 15px;
+    border-top: 1px solid rgb(198, 198, 198);
+    border-bottom: 1px solid rgb(198, 198, 198);
+}
+
+#compare button {
+    border: 0;
+    background-color: white;
+    font-size: 14px;
+    font-weight: 350;
+    display: flex;
+    align-items: end;
+    gap: 8px;
+}
+
+#compare button::before {
+    content: url(./assets/icons/content_copy.svg);
+    transform: rotate(180deg);
+}
+
+#compare ul {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+}
+
+#compare li {
+    font-size: 14px;
+    font-weight: 350;
+    border: 1px solid rgb(198, 198, 198);
+    border-radius: 5px;
+    width: fit-content;
+    padding: 10px 15px;
+    cursor: pointer;
+}
+
+#compare li.selected {
+    border-color: #ff6000;
+}
+
+#compare li:hover {
+    border-color: white;
+}
+
+#compare p {
+    font-size: 14px;
+    font-weight: 350;
+    color: rgb(155, 154, 154);
+    text-wrap: nowrap;
 }
