--- a/style.css
+++ b/style.css
@@ -8,15 +8,35 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Open_Sans";
-    font-weight: 400;
-    font-size: 16px;
+    font-weight: 350;
+    font-size: 14px;
     letter-spacing: 0.02em;
     color: #3B3B3B;
 }
 
 body {
-    width: 100vw;
+    max-width: 100vw;
     overflow-x: hidden;
+}
+
+h1 {
+    font-size: 29px;
+    font-weight: 650;
+    letter-spacing: 0,3em;
+    padding: 10px 0;
+}
+
+h2 {
+    font-size: 13.5px;
+    text-wrap: balance;
+    line-height: 1.4em;
+}
+
+h4 {
+    font-weight: 700;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
 }
 
 a {
@@ -52,13 +72,8 @@ header {
     border-bottom: 1px solid rgb(198, 198, 198);
 }
 
-#logo {
+#logo, #logo>img {
     width: 140px;
-    height: auto;
-}
-
-#logo > img {
-    width: 100%;
 }
 
 #menu {
@@ -68,17 +83,16 @@ header {
     gap: 10px;
     width: 225px;
     height: 45px;
-    padding: 10px;
+    padding: 10px 20px;
 }
 
 #menu > img {
     width: 28px;
-    height: auto;
 }
 
 #menu > p {
     font-size: 17px;
-    font-weight: 350;
+    text-wrap: nowrap;
 }
 
 #search {
@@ -95,10 +109,8 @@ header {
     width: 220px;
     height: 100%;
     padding: 5px 15px;
-    font-size: 14px;
     border: 1px solid rgb(198, 198, 198);
     border-radius: 5px 0 0 5px;
-
 }
 
 #searchingBar {
@@ -132,7 +144,6 @@ header {
 
 .accountLink > img {
     width: 23px;
-    height: auto;
 }
 
 .accountLink > p {
@@ -140,6 +151,7 @@ header {
 }
 
 main {
+    margin: auto;
     margin-top: 80px;
 }
 
@@ -164,7 +176,6 @@ main {
 
 #discount > p, #discount span {
     color: white;
-    font-size: 14px;
 }
 
 #discount > p {
@@ -199,9 +210,7 @@ main {
 }
 
 #offers a.hoverGrey {
-    font-size: 14px;
     padding: 10px;
-    font-weight: 350;
 }
 
 #offers a > span {
@@ -209,7 +218,6 @@ main {
 }
 
 #fiftyPercent, #fiftyPercent span {
-    font-size: 14px;
     font-weight: 700;
     letter-spacing: 0,3em;
     background: linear-gradient(to right, rgb(255, 102, 0), rgb(251, 177, 57));
@@ -225,7 +233,8 @@ main {
     grid-template-areas: 
         "mainHeader mainHeader"
         "sideBar mainContent"
-    ; 
+        "aside aside"
+        "footer footer"; 
 }
 
 #mainHeader {
@@ -245,22 +254,9 @@ main {
     align-items: center;
 }
 
-#navBar a {
-    font-size: 14px;
-    font-weight: 350;
-}
-
 .between::before {
     content: "⟩";
     padding-right: 10px;
-
-}
-
-h1 {
-    font-size: 29px;
-    font-weight: 650;
-    letter-spacing: 0,3em;
-    padding: 10px 0;
 }
 
 #subtitle {
@@ -316,7 +312,6 @@ h1 {
     border-radius: 5px;
     width: fit-content;
     font-size: 12px;
-    font-weight: 350;
     padding: 3px 10px;
 }
 
@@ -325,15 +320,6 @@ h1 {
     height: 40px;
     border: 1px solid rgb(198, 198, 198);
     border-radius: 5px;
-    font-size: 14px;
-}
-
-h4 {
-    font-size: 14px;
-    font-weight: 700;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
 }
 
 #filter input[type=search] {
@@ -388,8 +374,6 @@ h4 {
     height: 100%;
     width: 45%;
     text-align: center;
-    font-size: 14px;
-    font-weight: 350;
     padding-top: 8px;
 }
 
@@ -397,7 +381,6 @@ button.showMore {
     width: fit-content;
     padding: 3.5px 8px;
     font-size: 12px;
-    font-weight: 350;
     border: 1px solid rgb(198, 198, 198);
     border-radius: 5px;
     margin-top: 5px;
@@ -412,11 +395,6 @@ ul:has(input[type=checkbox]){
 ul:has(input[type=checkbox]) li {
     display: flex;
     gap: 12px;
-}
-
-ul:has(input[type="checkbox"]) label {
-    font-size: 14px;
-    font-weight: 350;
 }
 
 input[type="checkbox"] {
@@ -440,7 +418,6 @@ input[type="checkbox"]:checked {
     gap: 12px;
 }
 #moreFilter li {
-    font-size: 14px;
     font-weight: 700;
     display: flex;
     justify-content: space-between;
@@ -463,7 +440,6 @@ input[type="checkbox"]:checked {
 }
 
 #blogLinks a {
-    font-size: 14px;
     text-decoration: underline;
 }
 
@@ -480,9 +456,7 @@ input[type="checkbox"]:checked {
 #filterList {
     display: flex;
     align-items: start;
-    justify-content: space-around;
-    gap: 20px;
-    flex-wrap: nowrap;
+    justify-content: start;
     height: 200px;
     width: 75vw;
     overflow-x: scroll;
@@ -491,6 +465,7 @@ input[type="checkbox"]:checked {
 }
 
 #filterList li {
+    padding: 0 10px;
     scroll-snap-align: start;
     display: flex;
     flex-direction: column;
@@ -518,15 +493,11 @@ input[type="checkbox"]:checked {
     cursor: pointer;
 }
 
-#filterList p {
-    font-size: 14px;
-    font-weight: 350;
-}
-
 #compare {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 10px;
     padding: 15px 15px 15px 30px;
     margin-top: 15px;
     border-top: 1px solid rgb(198, 198, 198);
@@ -536,8 +507,6 @@ input[type="checkbox"]:checked {
 #compare button {
     border: 0;
     background-color: white;
-    font-size: 14px;
-    font-weight: 350;
     display: flex;
     align-items: end;
     gap: 8px;
@@ -557,8 +526,6 @@ input[type="checkbox"]:checked {
 }
 
 #compare li {
-    font-size: 14px;
-    font-weight: 350;
     border: 1px solid rgb(198, 198, 198);
     border-radius: 5px;
     width: fit-content;
@@ -575,8 +542,355 @@ input[type="checkbox"]:checked {
 }
 
 #compare p {
-    font-size: 14px;
-    font-weight: 350;
     color: rgb(155, 154, 154);
     text-wrap: nowrap;
+}
+
+#products {
+    width: 100%;
+    height: fit-content;
+}
+
+#products ul {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(14.5rem,1fr));
+    gap: 1rem;
+    margin-top: 40px;
+}
+
+#products li {
+    padding: 18px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+}
+
+#products p, #products span {
+    font-size: 12px;
+}
+
+#products div:first-child {
+    align-self: center;
+    width: 100%;
+}
+
+#products div:first-child p {
+    background-color: #BF2019;
+    color: white;
+    padding: 3px 6px;
+    width: fit-content;
+    border: 1px solid #BF2019;
+    border-radius: 5px;
+    font-weight: 500;
+}
+
+#products div:first-child a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#prices, #reviews {
+    padding: 10px 0;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+#prices p:first-child {
+    color: #BF2019;
+    font-size: 20px;
+    font-weight: 650;
+}
+
+#price {
+    text-decoration: line-through;
+    color: rgb(155, 154, 154);
+}
+
+#reviews, #shipping {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+#reviews img {
+    width: 16px;
+    height: 16px;
+}
+
+#reviews p:first-child {
+    font-weight: 700;
+}
+
+#shipping {
+    align-items: start;
+}
+
+#shipping p, #shipping span {
+    font-weight: 700;
+}
+
+#shipping span {
+    color: #118000;
+}
+
+#products > div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    padding-top: 30px;
+}
+
+#products > div p {
+    font-size: 17px;
+}
+
+#pageCounter a {
+    width: 48px;
+    height: 48px;
+    border: 1px solid rgb(198, 198, 198);
+    border-radius: 5px;
+    background-color: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#pageCounter a:hover {
+    background-color: rgb(233, 233, 233);
+    cursor: pointer;
+}
+
+aside {
+    grid-area: aside;
+    width: 100%;
+    padding: 30px 80px;
+    border-top: 1px solid rgb(198, 198, 198);
+    border-bottom: 1px solid rgb(198, 198, 198);
+}
+
+aside h4 {
+    padding-bottom: 12px;
+}
+
+aside ul {
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+aside li {
+    padding: 0 10px 5px 0;
+    margin-bottom: 5px;
+    border-right: 1px solid rgb(198, 198, 198);
+}
+
+aside a {
+    font-size: 12px;
+    border-bottom: 1px solid rgb(88, 87, 87);
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+aside a:hover {
+    background-color: rgb(235, 235, 235);
+    border-color: transparent;
+}
+
+footer {
+    grid-area: footer;
+}
+
+footer > div {
+    padding: 60px 60px 50px 80px;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid rgb(198, 198, 198);
+}
+
+#links > div {
+    width: 240px;
+    padding: 10px 15px;
+}
+
+#links > div:last-child {
+    width: 350px;
+}
+
+footer h4 {
+    padding-bottom: 20px;
+}
+
+footer ul {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+footer a {
+    text-wrap: wrap;
+}
+
+#comunity a {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+
+#comunity img {
+    width: 18px;
+}
+
+footer select {
+    margin-top: 5px;
+    margin-bottom: 15px;
+    width: 100%;
+    padding: 10px 15px;
+    border: 1px solid rgb(198, 198, 198);
+    border-radius: 5px;
+    font-size: 17px;
+    font-weight: 400;
+}
+
+#awards, #paymentMethods {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    padding: 5px 0 20px 0;
+}
+
+#paymentMethods {
+    justify-content: space-around;
+}
+
+footer > p {
+    text-align: center;
+    text-wrap: wrap;
+    font-size: 12px;
+    padding: 30px 20px;
+    margin-bottom: 40px;
+    height: fit-content;
+}
+
+@media (max-width: 1200px) {
+    #menu > p, #sideBar {
+        display: none;
+    }
+    #mainSection {
+        grid-template-columns: 1fr;
+        grid-template-areas: 
+        "mainHeader"
+        "mainContent"
+        "aside"
+        "footer"; 
+    }
+    #subtitle {
+        text-align: justify;
+    }
+    #mainContent {
+        padding-left: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    #filterList {
+        max-width: 90vw;
+    }
+    #compare ul {
+        flex-wrap: wrap;
+    }
+    footer ul {
+        display: none;
+    }
+    footer > div {
+        flex-direction: column;
+    }
+    #links > div {
+        width: 100%;
+        border-bottom: 1px solid rgb(198, 198, 198);
+        padding: 0;
+    }
+    #links > div:last-child {
+        border-color: transparent;
+        width: 100%;
+    }
+    footer h4 {
+        padding: 10px;
+    }
+    #paymentMethods {
+       justify-content: start;
+    }
+    footer p {
+        padding: 50px;
+    }
+}
+
+@media (max-width: 990px) {
+    header {
+        padding: 15px;
+    }
+    #mainSection nav {
+        display: none;
+    }
+    #logo, #logo>img {
+        width: 80px;
+    }
+    #menu {
+        width: fit-content;
+    }
+    #search, #searchingBar {
+        max-width: 300px;
+    }
+    #catalog, .accountLink>p, #offers, #compare button, #compare p {
+        display: none;
+    }
+    #login {
+        width: 100px;
+        gap: 5px;
+    }
+    #filterList {
+        width: 85vw;
+    }
+    #filterList img {
+        height: 40px;
+        width: 40px;
+    }
+    #compare li {
+        font-size: 12px;
+    }
+}
+
+@media (max-width: 500px) {
+    #menu {
+        display: none;
+    }
+    #search, #searchingBar {
+        max-width: 100px;
+    }
+    #discount {
+        flex-wrap: wrap;
+        text-wrap: wrap;
+        padding-right: 10px;
+        padding-left: 10px;
+    }
+    #filterList {
+        width: 80vw;
+    }
+    #mainSection {
+        place-items: center;
+        padding: 15px 20px;
+    }
+    #paymentMethods {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    footer div {
+        justify-content: center;
+        padding: 20px;
+    }
 }
